# 21_HTML

./: catalog.html  main.html  main.py  product.html  pyproject.toml
css/: bootstrap.css
html/: index.html
src/: local_server.py  read_write_file.py
ui/: catalog.html  contacts.html  main.html  orders.html
