[project]
name = "html-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Andreev",email = "andrianov_maksim@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"


[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.gitignore
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
skip_glob = ["docs/*"]
skip = [".gitignore", ".dockerignore"]
